# codesentinel

./: Dockerfile  README.md  app_beautiful.py  client.py  data.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py  grader.py
