[project]
name = "codesentinel"
version = "1.0.0"
description = "CodeSentinel - AI Code Bug Detection RL Environment"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
